[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
aho-corasick = "1.1.2"
nom = "7.1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
